[package]
name = "kuber"
version = "0.1.0"
edition = "2024"
description = "Ephemeral kubeconfig manager wrapping kubie with DigitalOcean doctl"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
colored = "3"
anyhow = "1"
