[package]
name = "kuber-ctx"
version = "0.1.0"
edition = "2024"
description = "Ephemeral kubeconfig manager wrapping kubie with DigitalOcean doctl"
license = "MIT"
repository = "https://github.com/abs3ntdev/kuber"
keywords = ["kubernetes", "kubeconfig", "digitalocean", "doctl", "kubie"]
categories = ["command-line-utilities"]

[[bin]]
name = "kuber"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "3"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
skim = { version = "4.3.0", default-features = false }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Allow these pedantic lints that add noise without value
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
